--- a/src/app/components/todo-add-form/todo-add-form.component.html
+++ b/src/app/components/todo-add-form/todo-add-form.component.html
@@ -1,9 +1,25 @@
-<span class="add-card">
-  <input type="text" required minlength="4" maxlength="150" size="50" [(ngModel)]="text" />
-  <app-button
-    [disabled]="text.trim().length === 0"
-    [class]="{ 'add-card_btn--active': text.trim().length > 0, 'add-card_btn': true }"
-    (click)="onClick()">
-    📝
-  </app-button>
+<span class="add-card" xmlns="http://www.w3.org/1999/html">
+  <div>
+    <input
+      class="add-tittle"
+      type="text"
+      required
+      minlength="4"
+      maxlength="150"
+      size="50"
+      [(ngModel)]="text"
+      placeholder="Задача" />
+    <app-button
+      [disabled]="text.trim().length === 0"
+      [class]="{ 'add-card_btn--active': text.trim().length > 0, 'add-card_btn': true }"
+      (click)="onClick()"
+      appTooltip
+      tooltip="Добавить Задачу"
+      [position]="TooltipPosition.ABOVE">
+      📝
+    </app-button>
+  </div>
+  <div>
+    <textarea class="add-description" [(ngModel)]="description" placeholder="Описание"></textarea>
+  </div>
 </span>
