--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,6 +1,10 @@
-<div class="todo_item">
+<div class="todo_item" [class.selected]="isSelected" (click)="onSelectedClick(todo.id)">
   <div class="todo_item_text">
     <p>{{ todo.id }} . {{ todo.text }}</p>
+    <small *ngIf="isSelected">{{ todo.description }}</small>
   </div>
-  <app-button (click)="onItemDelete(todo.id)">🗑️</app-button>
+  <app-button (click)="onItemDelete(todo.id)" appTooltip tooltip="Удалить Задачу" [position]="TooltipPosition.BELOW"
+    >🗑️
+  </app-button>
+  <!-- -->
 </div>
