--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -3,8 +3,7 @@
     <p>{{ todo.id }} . {{ todo.text }}</p>
     <small *ngIf="isSelected">{{ todo.description }}</small>
   </div>
-  <app-button (click)="onItemDelete(todo.id)" appTooltip tooltip="Удалить Задачу" [position]="TooltipPosition.BELOW"
+  <app-button (click)="onItemDelete(todo.id)" appTooltip tooltip="Удалить Задачу" [position]="TooltipPosition.LEFT"
     >🗑️
   </app-button>
-  <!-- -->
 </div>
