--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 @import '~normalize.css';
 body {
-  padding: 20px;
+  //padding: 20px;
+  //padding: 20px;
 }
 
 html,
 body {
-  height: 100%;
+  height: 98%;
 }
 body {
   margin: 0;
