--- a/src/app/components/todo-add-form/todo-add-form.component.html
+++ b/src/app/components/todo-add-form/todo-add-form.component.html
@@ -1,7 +1,7 @@
 <span class="add-card">
   <input type="text" required minlength="4" maxlength="150" size="50" [(ngModel)]="text" />
   <app-button
-    [disabled]="text.trim().length === 0"
+    [disabled]="isDisabled()"
     [class]="{ 'add-card_btn--active': text.trim().length > 0, 'add-card_btn': true }"
     (click)="onClick()">
     📝
