--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button [disabled]="disabled"><ng-content></ng-content></button>
+<button class="button" [disabled]="disabled"><ng-content></ng-content></button>
