--- a/src/app/components/todo-details/todo-details.component.scss
+++ b/src/app/components/todo-details/todo-details.component.scss
@@ -1,10 +1,5 @@
 .todo-detail {
-  width: 20rem;
-  max-width: 20rem;
-  height: 15rem;
-  margin-top: 50%;
-  margin-left: 10%;
-
+  display: flex;
   padding: 1rem;
   border: aliceblue 1px solid;
   border-radius: 5px;
