--- a/src/app/components/todo-add-form/todo-add-form.component.scss
+++ b/src/app/components/todo-add-form/todo-add-form.component.scss
@@ -10,15 +10,25 @@
 }
 
 .add-tittle {
-  width: 80%;
-  height: 1rem;
+  width: 85%;
+  height: 2rem;
+}
+
+.ng-valid[required],
+.ng-valid.required .ng-touched {
+  border: 5px solid #42a948;
+}
+
+.ng-invalid:not(form).ng-touched {
+  border: 2px solid #de1b1b;
 }
 
 .add-card_btn {
-  width: 20%;
+  width: 5%;
   background-color: slategray;
   opacity: 50%;
   text-align: center;
+  margin: 5px;
 }
 
 .add-card_btn--active {
@@ -26,7 +36,8 @@
 }
 
 .add-description {
-  width: 90%;
+  margin-top: 5px;
+  width: 94%;
   height: 5rem;
   resize: none;
 }
