--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,4 @@
-<button [disabled]="disabled">
+<button [disabled]="disabled" class="button">
   <ng-content></ng-content>
   <ng-content select=".btn-icon"></ng-content>
 </button>
