--- a/src/app/components/todo-add-form/todo-add-form.component.html
+++ b/src/app/components/todo-add-form/todo-add-form.component.html
@@ -22,10 +22,12 @@
       </div>
     </ng-container>
 
-    <textarea
-      name="todoDescription"
-      formControlName="todoDescription"
-      class="add-description"
-      placeholder="Описание"></textarea>
+    <div class="add-tittle">
+      <textarea
+        name="todoDescription"
+        formControlName="todoDescription"
+        class="add-description"
+        placeholder="Описание"></textarea>
+    </div>
   </form>
 </span>
