--- a/src/app/components/todo-add-form/todo-add-form.component.scss
+++ b/src/app/components/todo-add-form/todo-add-form.component.scss
@@ -39,7 +39,8 @@
 
 .add-description {
   margin-top: 5px;
-  width: 94%;
+  margin-right: 5px;
+  width: 98.5%;
   height: 5rem;
   resize: none;
 }
