--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-todo-list></app-todo-list>
+<!--<app-todo-list></app-todo-list>-->
 
+<router-outlet></router-outlet>
 <app-toaster></app-toaster>
