--- a/src/app/features/task-backlog/components/todo-details/todo-details.component.scss
+++ b/src/app/features/task-backlog/components/todo-details/todo-details.component.scss
@@ -1,6 +1,7 @@
 .todo-detail {
   display: flex;
   padding: 1rem;
-  border: aliceblue 1px solid;
   border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
