--- a/src/app/features/task-backlog/components/todo-list/todo-list.component.html
+++ b/src/app/features/task-backlog/components/todo-list/todo-list.component.html
@@ -1,6 +1,6 @@
 <div class="todo-layout">
   <div class="todo-card">
-    <app-todo-header></app-todo-header>
+    <!--    <app-todo-header></app-todo-header>-->
     <app-todo-add-form [editTodo]="editTodo" (newItemEvent)="onItemAdd($event)" (editedItemEvent)="onItemEdit($event)">
     </app-todo-add-form>
 
