--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--<app-todo-list></app-todo-list>-->
 
-<router-outlet></router-outlet>
-<app-toaster></app-toaster>
+<!--<router-outlet></router-outlet>-->
+<!--<app-toaster></app-toaster>-->
+
+<app-task-landing></app-task-landing>
