--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@ body {
 
 html,
 body {
-  height: 98%;
+  height: 99.9%;
 }
 body {
-  margin: 1rem;
+  // margin: 1rem;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
