--- a/src/app/features/task-board/components/task-board-column/task-board-column.component.html
+++ b/src/app/features/task-board/components/task-board-column/task-board-column.component.html
@@ -1,9 +1,9 @@
-<div class="example-container">
-  <h2 class="column-title">{{ title }} ({{ (todoListDone$ | async)?.length }})</h2>
-  <div cdkDropList [cdkDropListData]="todoListDone$" class="example-list" (cdkDropListDropped)="drop($event)">
+<div class="task-container">
+  <h2 class="task-column-title">{{ title }} ({{ (todoList$ | async)?.length }})</h2>
+  <div cdkDropList [cdkDropListData]="todoList$" class="task-list" (cdkDropListDropped)="drop($event)">
     <div
-      class="example-box"
-      *ngFor="let item of todoListDone$ | async; trackBy: trackByItem"
+      class="task-box"
+      *ngFor="let item of todoList$ | async; trackBy: trackByItem"
       cdkDrag
       [cdkDragData]="item"
       attr.taskid="{{ item.id }}">
