--- a/src/app/features/task-board/components/task-board-column/task-board-column.component.scss
+++ b/src/app/features/task-board/components/task-board-column/task-board-column.component.scss
@@ -1,4 +1,4 @@
-.example-container {
+.task-container {
   width: 31%;
   max-width: 100%;
   margin: 0 25px 25px 0;
@@ -7,7 +7,7 @@
   height: 100%;
 }
 
-.example-list {
+.task-list {
   border: solid 1px #ccc;
   background: white;
   border-radius: 4px;
@@ -19,7 +19,7 @@
   padding: 5px 15px 5px 5px;
 }
 
-.example-box {
+.task-box {
   padding: 20px;
   margin: 5px;
   border-bottom: solid 1px #d54040;
@@ -27,7 +27,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  //justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
   background: #73ecc6;
@@ -52,15 +51,15 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
+.task-box:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.task-list.cdk-drop-list-dragging .task-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.column-title {
+.task-column-title {
   display: flex;
   justify-content: center;
 }
